*** empty log message ***

--- a/rfc2629-ja.html
+++ b/rfc2629-ja.html
@@ -1,4 +1,4 @@
-<!--#if expr=" != /MSIE/" --><?xml version="1.0" encoding="iso-2022-jp"?><!--#endif -->
+<?xml version="1.0" encoding="iso-2022-jp"?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
 <html>
 <head profile="http://suika.fam.cx/~wakaba/lang/rfc/translate/html-profile">
