*** empty log message ***

--- a/introduction.ja.html
+++ b/introduction.ja.html
@@ -45,7 +45,7 @@
 <p xml:lang="en" class="t-l-en">
           There are some Japanese translations of 
           <a href="http://www.ietf.org/" title="URI: &lt;http://www.ietf.org/>" class="rfc-eref">IETF</a>
-          <a href="http://www.rfc-editor.org/" title="URI: &lt;http://www.rfc-editor.org/>" class="rfc-eref">RFC</a>s.
+          <a href="http://www.rfc-editor.org/" title="URI: &lt;http://www.rfc-editor.org/>" class="rfc-eref">RFC</a>s here.
         </p>
 </div>
       </div>
@@ -57,66 +57,108 @@
 <h1 xml:lang="ja" class="t-l-ja" xmlns="http://www.w3.org/1999/xhtml">1. 
           説明</h1>
 </div>
-  <p class="rfc-t" id="rfc.section.1.p.1" xmlns="http://www.w3.org/1999/xhtml">
-   ここには、幾つかの RFC の和訳が置いてあります。各文書は、
-   <span class="rfc-xref" xmlns="">
-<a href="#RFC2629" title="Writing I-Ds and RFCs using XML">[1]</a>
-</span> 
-   形式に、翻訳文のための多少の拡張を加えた形式でマーク付けしています。
-  </p>
+  <div class="rfc-t" id="rfc.section.1.p.1" xmlns="http://www.w3.org/1999/xhtml">
+    <div class="t-pair" xmlns="">
+<p xml:lang="ja" class="t-l-ja">
+      ここには、幾つかの RFC の和訳が置いてあります。各文書は、
+      RFC 2629 <a href="#RFC2629" title="XML を使って I-D や RFC を書く">[RFC2629]</a> 
+      形式に、翻訳文のための多少の拡張を加えた形式でマーク付けしています。
+    </p>
+<p xml:lang="en" class="t-l-en">
+      There are some translations of RFCs here.
+      Every documents are marked up with extended RFC 2629 
+      <span class="rfc-xref">
+<a href="#RFC2629" title="Writing I-Ds and RFCs using XML">[RFC2629]</a>
+</span> format for translation.
+    </p>
+</div>
+  </div>
   
-  <p class="rfc-t" id="rfc.section.1.p.2" xmlns="http://www.w3.org/1999/xhtml">
-    また、それを HTML 化したものも併せて用意しています。
+  <div class="rfc-t" id="rfc.section.1.p.2" xmlns="http://www.w3.org/1999/xhtml">
+    <div class="t-pair" xmlns="">
+<p xml:lang="ja" class="t-l-ja">
+      また、それを HTML 化したものも併せて用意しています。
     HTML 版は、英和対訳の形になっています。適切なスタイルシート
     (XSLT や CSS) などを使えば、和文のみに出来ます。
-  </p>
+    </p>
+<p xml:lang="en" class="t-l-en">
+      HTMLed version of those are also provided.
+    </p>
+</div>
+  </div>
   
   <p class="rfc-t" id="rfc.section.1.p.3" xmlns="http://www.w3.org/1999/xhtml">
     全ての翻訳文は、 (その末尾に記してある通り、)
     無保証ではありますが、自由に利用することが出来ます。
-    (公開されている RFC 和訳の多くは、 (意図的かどうかは別にして、)
+    <ins class="t-note t-l-ja" xml:lang="ja" xmlns="">
+    (<span class="t-note-title">訳注: </span>公開されている RFC 和訳の多くは、 (意図的かどうかは別にして、)
     その自由な利用が認められていません。あるいは、閲覧や配布は認められていても、改訳等の改変が認められていなかったり、出来るのかどうか曖昧で合ったりします。しかし、ここにある翻訳文は、これらも含めて自由に使って構いません。)
+  </ins>
   </p>
 </div>
 
 <div class="rfc-section" id="rfc.section.2">
-<div class="t-pair t-heading">
-<h1 xml:lang="en" class="t-l-en" xmlns="http://www.w3.org/1999/xhtml">2. Security Considerations</h1>
-<h1 xml:lang="ja" class="t-l-ja" xmlns="http://www.w3.org/1999/xhtml">2. 
-          安全性に関して</h1>
+<div>
+<h1 xmlns="http://www.w3.org/1999/xhtml">2. RFC の日本語訳についての話題</h1>
 </div>
   <p class="rfc-t" id="rfc.section.2.p.1" xmlns="http://www.w3.org/1999/xhtml">
+    RFC の翻訳についての話題, 特にここにある RFC 
+    の和訳については、次の場所で取り扱います。
+  </p>
+  <ul class="rfc-list-empty">
+  <li>
+<a href="news://suika.fam.cx/suika.markup" title="URI: &lt;news://suika.fam.cx/suika.markup>" class="rfc-eref">ニュース組 suika.markup</a>
+</li>
+  <li>
+<a href="http://suika.fam.cx/~wakaba/-temp/wiki/wiki?RFC%A4%CE%CF%C2%CC%F5%A4%CB%A4%C4%A4%A4%A4%C6%A4%DE%A4%BF%A1%BC%A4%EA" title="URI: &lt;http://suika.fam.cx/~wakaba/-temp/wiki/wiki?RFC%A4%CE%CF%C2%CC%F5%A4%CB%A4%C4%A4%A4%A4%C6%A4%DE%A4%BF%A1%BC%A4%EA>" class="rfc-eref">RFC
+  の和訳についてまたーり</a>
+  (<a href="http://suika.fam.cx/~wakaba/-temp/wiki/wiki" title="URI: &lt;http://suika.fam.cx/~wakaba/-temp/wiki/wiki>" class="rfc-eref">SuikaWiki</a>)</li>
+  </ul>
+</div>
+
+<div class="rfc-section" id="rfc.section.3">
+<div class="t-pair t-heading">
+<h1 xml:lang="en" class="t-l-en" xmlns="http://www.w3.org/1999/xhtml">3. Security Considerations</h1>
+<h1 xml:lang="ja" class="t-l-ja" xmlns="http://www.w3.org/1999/xhtml">3. 
+          安全性に関して</h1>
+</div>
+  <p class="rfc-t" id="rfc.section.3.p.1" xmlns="http://www.w3.org/1999/xhtml">
     翻訳文には、誤訳・誤植などがあり得ます。また、翻訳文とともにマーク付けされている原文も、マーク付けの際の誤植が存在する可能性があります。ですから、可能な限り、
     <a href="http://www.rfc-editor.org/" title="URI: &lt;http://www.rfc-editor.org/>" class="rfc-eref" xmlns="">RFC Editor</a>
     発行の原文と照合して確認して下さい。
   </p>
-  <p class="rfc-t" id="rfc.section.2.p.2" xmlns="http://www.w3.org/1999/xhtml">
+  <p class="rfc-t" id="rfc.section.3.p.2" xmlns="http://www.w3.org/1999/xhtml">
     RFC 原文発行後に見つかった誤りなどの情報は、出来るだけ訳注として補足するようにしていますが、完全ではないかもしれません。関係する
     IETF の作業部会の文書などで確認して下さい。
   </p>
-  <p class="rfc-t" id="rfc.section.2.p.3" xmlns="http://www.w3.org/1999/xhtml">
+  <p class="rfc-t" id="rfc.section.3.p.3" xmlns="http://www.w3.org/1999/xhtml">
     発行から年月が経っている RFC には、現状と合わない部分が多々あると思われます。特に、当時問題とされなかった安全性に関する問題については、実装の際に十分御注意下さい。
   </p>
-  <p class="rfc-t" id="rfc.section.2.p.4" xmlns="http://www.w3.org/1999/xhtml">
+  <p class="rfc-t" id="rfc.section.3.p.4" xmlns="http://www.w3.org/1999/xhtml">
     と、こんなもんでいいかな? :-)
   </p>
 </div>
 <div class="rfc-section" id="rfc.references">
 <div class="t-pair t-heading">
 <h1 xml:lang="en" class="t-l-en">References</h1>
-<h1 xml:lang="ja" class="t-l-ja"/>
+<h1 xml:lang="ja" class="t-l-ja">参考文献</h1>
 </div>
 <dl>
-    <dt id="RFC2629">[1]</dt>
+    <dt id="RFC2629">[RFC2629]</dt>
 <dd>『<cite>Writing I-Ds and RFCs using XML</cite>』<span class="t-pair">
 <span xml:lang="ja" class="t-l-ja">, 『<cite>XML を使って I-D や RFC を書く</cite>』</span>
 </span>, <span title="@fullname">Rose, M.T.</span>, <a href="http://suika.fam.cx/uri-res/N2L?urn:ietf:rfc:2629" title="URI: &lt;http://suika.fam.cx/uri-res/N2L?urn:ietf:rfc:2629>">RFC 2629</a>。</dd>
     
-    <dt id="XRFCTML">[2]</dt>
+    <dt id="XRFCTML">[XRFCTML]</dt>
 <dd>『<cite>
 <a href="http://suika.fam.cx/~wakaba/lang/rfc/translation/" title="URI: &lt;http://suika.fam.cx/~wakaba/lang/rfc/translation/>">拡張可能な RFC の翻訳マーク付け言語</a>
 </cite>』。<span class="t-add-info">Work in progress:-)</span>
 </dd>
+    
+    <dt id="XML2RFC">[XML2RFC]</dt>
+<dd>『<cite>
+<a href="http://xml.resource.org/" title="URI: &lt;http://xml.resource.org/>">xml2rfc</a>
+</cite>』。</dd>
   </dl>
 </div>
 <div id="rfc-authors" class="rfc-section">
@@ -142,10 +184,25 @@
 <li>新規作成。</li>
 </ul>
 </dd>
+<dt>2002-09-01 <a href="mailto:w@suika.fam.cx" title="電子メイル: &lt;w@suika.fam.cx>">わかば</a>
+</dt>
+<dd>
+<ul>
+<li>少し英文を増やす。</li>
+<li>この文書の取り扱いの説明を書き直す。</li>
+</ul>
+</dd>
 </dl>
 </div>
 <div class="rfc-section" id="rfc-t-copyright">
 <h1>訳文についての著作権声明</h1>
+<ul/>
+<div class="t-full-statement">
+      <p class="rfc-t" xmlns="http://www.w3.org/1999/xhtml">
+        この説明文そのものについては、筆者は著作権を主張しません。御自由にお使い下さい。各
+        RFC については、それぞれの説明をご覧下さい。
+      </p>
+    </div>
 </div>
 </ins>
 </body>
